// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDetailsInfo should render correctly for a confirmed transaction 1`] = `
<View
  style={
    {
      "gap": 16,
    }
  }
>
  <Divider />
  <OutputInfo
    receivingAddress="receivingAddress"
    transaction={
      {
        "amount": 900,
        "confirmed": true,
        "date": 2022-09-14T16:14:02.835Z,
        "height": 1,
        "id": "txid1_confirmed",
        "offerData": [
          {
            "address": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
            "amount": 900,
            "contractId": undefined,
            "currency": undefined,
            "offerId": "123",
            "price": undefined,
          },
        ],
        "type": "TRADE",
      }
    }
  />
  <Divider />
  <ConfirmationSummaryItem
    confirmed={true}
  />
  <React.Fragment>
    <CopyableSummaryItem
      text="1"
      title="block"
    />
    <CopyableSummaryItem
      text="14/09/2022"
      title="time"
    />
  </React.Fragment>
  <Divider />
  <Bubble
    color="primary"
    ghost={true}
    iconId="externalLink"
    iconSize={16}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
      }
    }
  >
    view in explorer
  </Bubble>
</View>
`;

exports[`TransactionDetailsInfo should render correctly for a pending transaction 1`] = `
<View
  style={
    {
      "gap": 16,
    }
  }
>
  <Divider />
  <OutputInfo
    receivingAddress="receivingAddress"
    transaction={
      {
        "amount": 900,
        "confirmed": false,
        "date": 2022-09-14T16:14:02.835Z,
        "height": undefined,
        "id": "txid1",
        "offerData": [
          {
            "address": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
            "amount": 900,
            "contractId": undefined,
            "currency": undefined,
            "offerId": "123",
            "price": undefined,
          },
        ],
        "type": "TRADE",
      }
    }
  />
  <Divider />
  <ConfirmationSummaryItem
    confirmed={false}
  />
  <TransactionETASummaryItem
    txId="txid1"
  />
  <Bubble
    color="primary"
    iconId="chevronsUp"
    iconSize={16}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
      }
    }
  >
    increase network fee
  </Bubble>
  <Divider />
  <Bubble
    color="primary"
    ghost={true}
    iconId="externalLink"
    iconSize={16}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
      }
    }
  >
    view in explorer
  </Bubble>
</View>
`;
